# 3DCurveFit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: GeometryTypes.h  PointCloudPipeline.h
include/fitting/: BSplineCurveFitter.h  BezierCurveFitter.h  CurveFitResult.h  PolynomialCurveFitter.h
include/ui/: MainWindow.h  OsgWidget.h
include/visualization/: OsgScene.h
src/core/: GeometryTypes.cpp  PointCloudPipeline.cpp
src/fitting/: BSplineCurveFitter.cpp  BezierCurveFitter.cpp  PolynomialCurveFitter.cpp
src/ui/: MainWindow.cpp  OsgWidget.cpp
src/visualization/: OsgScene.cpp
